# peach-dyndns-server

./: .env.sample  .gitignore  Cargo.toml  README.md  Rocket.toml  deploy_prod.sh  generate_zone.sh
bash/: create_subdomain.sh  ns1.sh  nsupdate.sh
bind_config/: bind-subdomain.md  setting-up-bind.md  setup.md
debian/: bindctl  peach-dyndns-server.service  postinst  reloadbind
docs/: setting-up-bind-specific-subdomain.md  setting-up-bind-with-wildcard-subdomain.md  setup-bind-for-peach-dyndns.md
ns_tests/: grayns.sh  greenns.sh  ns1.sh
src/: cli.rs  client.rs  constants.rs  dns.rs  errors.rs  generate_zone.rs  http.rs  lib.rs  main.rs  routes.rs  utils.rs
templates/: zonefile.tera
