[package]
name = "peach-dyndns-server"
version = "0.1.0"
authors = ["Michael Williams <michael.williams@enspiral.com>", "Max Fowler <notplants@mfowler.info>"]
edition = "2018"

[dependencies]
clap-log-flag = "0.2"
clap-verbosity-flag = "0.2"
log = "0.4"
futures = "0.3.1"
nest = "1"
structopt = "0.2"
tokio = { version = "1.5.0", features = ["full"] }
tokio-executor = "0.1"
tokio-tcp = "0.1.4"
tokio-udp = "0.1.4"
trust-dns-server = "0.20.2"
trust-dns-client = "0.20.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
serde = "1.0.125"
dotenv = "0.15.0"
tera = "1"
regex = "1"

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-dyndns is an http API to create dynamic-dns configurations for bind9."""
maintainer-scripts="debian"
systemd-units = { unit-name = "peach-dyndns-server" }
assets = [
    ["target/release/peach-dyndns-server", "usr/bin/", "755"],
]

