[package]
name = "peach-dyndns-server"
version = "0.1.0"
authors = ["Michael Williams <michael.williams@enspiral.com>", "Max Fowler <notplants@mfowler.info>"]
edition = "2018"

[dependencies]
clap-log-flag = "0.2"
clap-verbosity-flag = "0.2"
log = "0.4"
futures = "0.3.1"
nest = "1"
structopt = "0.2"
jsonrpc-core = "11"
jsonrpc-http-server = "11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
tera = "1"
regex = "1"
snafu = "0.6"
env_logger = "0.6"

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-dyndns is an http API to create dynamic-dns configurations for bind9."""
maintainer-scripts="debian"
systemd-units = { unit-name = "peach-dyndns-server" }
assets = [
    ["target/release/peach-dyndns-server", "usr/bin/", "755"],
    ["debian/reloadbind", "usr/bin/", "755"],
    ["debian/bindctl", "/etc/sudoers.d/bindctl", "655"],
    ["templates/*", "/srv/peachcloud/peach-dyndns-server/prod-peach-dyndns/templates/", "644"],
]